Fix micro scrollbar in header
On Windows systems which used RES (potentially Chrome-only), two
scrollbar arrows appeared in the header. These were useless, as they
were designed to scroll any overflow in the header—nobody wants or
needs this from my understanding.

Slight cut this bit off anyway, effectively performing the same
function. Let’s just override it.

--- a/styles/header.styl
+++ b/styles/header.styl
@@ -53,6 +53,11 @@
         background none
         border none
         
+        body &
+            // Override an RES glitch which shows a scrollbar here
+            // (We do the same thing by cutting it off where needed)
+            overflow-x visible
+        
         // These bits are the different shortcut containers
         // We want to make room on the right for the user bar
         &, .width-clip, .res & #RESShortcutsEditContainer
